Fix scrollbars

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -890,8 +890,7 @@ Layout
 --------------------------------------------------------------*/
 .site-container {
 	flex: 1 0 auto;
-	overflow-x: hidden;
-	overflow-y: visible;
+	overflow: hidden;
 	max-width: 100%;
 }
 /*--------------------------------------------------------------
